Closed
Bug 343596
Opened 19 years ago
Closed 19 years ago
setTimeout doesn't work after setting script node's text to a script that causes an error
Categories
(Core :: DOM: Core & HTML, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: jruderman, Assigned: mrbkap)
References
Details
(Keywords: fixed1.8.1, testcase)
Attachments
(2 files)
|
535 bytes,
text/html
|
Details | |
|
1.84 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Load the testcase.
Expected: alert saying "PASS"
Result: no alert
I'm using a Mac debug build from within the last few days.
| Reporter | ||
Comment 1•19 years ago
|
||
| Assignee | ||
Comment 2•19 years ago
|
||
This is because nested scripts aren't properly clearing pending exceptions off of their contexts.
Component: JavaScript Engine → DOM
| Assignee | ||
Comment 3•19 years ago
|
||
The script loader code assumes that nsIScriptContext::EvaluateString will return an error code if there was an error evaluating the string. This isn't true, however, so we're not clearing the pending exception on cx and further js_Interprets on cx are bailing. This assumption doesn't usually bite us because in the common case, there's no code running on cx in nsJSContext::EvaluateString, so the JS engine reports the uncaught exception.
| Assignee | ||
Updated•19 years ago
|
Updated•19 years ago
|
QA Contact: general → ian
| Assignee | ||
Updated•19 years ago
|
Attachment #228093 -
Flags: review?(bzbarsky) → review?(jst)
Comment 4•19 years ago
|
||
Comment on attachment 228093 [details] [diff] [review]
Proposed fix
r+sr=jst
Attachment #228093 -
Flags: superreview+
Attachment #228093 -
Flags: review?(jst)
Attachment #228093 -
Flags: review+
| Assignee | ||
Comment 5•19 years ago
|
||
Fix checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Is this needed for 1.8.1? (Will it be needed when JS1.7 lands there?)
Flags: blocking1.8.1?
Updated•19 years ago
|
Flags: blocking1.8.1?
Keywords: fixed1.8.1
Comment 7•18 years ago
|
||
Checking in test_bug343596.html;
/cvsroot/mozilla/testing/mochitest/tests/test_bug343596.html,v <-- test_bug343596.html
initial revision: 1.1
done
Flags: in-testsuite+
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•