Always report uncaught exceptions to avoid bad interactions with the JS interpreter. bug 343596, r+sr=jst